@@ -77,6 +77,17 @@ int Game::SetupFaction( Faction *pFac )
 		temp2->Study(S_COMBAT, 60);
 	}
 
+	if (Globals->UPKEEP_MINIMUM_FOOD > 0)
+	{
+		if (!(ItemDefs[I_FISH].flags & ItemType::DISABLED))
+			temp2->items.SetNum(I_FISH, 6);
+		else if (!(ItemDefs[I_LIVESTOCK].flags & ItemType::DISABLED))
+			temp2->items.SetNum(I_LIVESTOCK, 6);
+		else if (!(ItemDefs[I_GRAIN].flags & ItemType::DISABLED))
+			temp2->items.SetNum(I_GRAIN, 2);
+		temp2->items.SetNum(I_SILVER, 10);
+	}
+
 	temp2->MoveUnit( reg->GetDummy() );
 
     return( 1 );
